前后端测试

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,6 +1,8 @@
 $main-color:white;
 $font-color:black;
 $background-color:#f4f5f7;
+$timer-size:400px;
+$timerCircle-size:410px;
 
 html {
     width: 100%;
